Fix Formateur link and add Instructor Login page

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div id="roles"
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 max-w-7xl mx-auto fade-in scroll-mt-32"
             style="animation-delay: 0.3s">
-            <a href="pages/formateur/dashboard.html"
+            <a href="pages/formateur/login.html"
                 class="group glass-card p-8 rounded-[2rem] hover:bg-white hover:border-indigo-100 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 text-left relative overflow-hidden">
                 <div
                     class="absolute top-0 right-0 w-32 h-32 bg-indigo-50 rounded-bl-[100px] -mr-8 -mt-8 transition-transform group-hover:scale-150 z-0">
