--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div id="roles"
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 max-w-7xl mx-auto fade-in scroll-mt-32"
             style="animation-delay: 0.3s">
-            <a href="pages/formateur/login.html"
+            <a href="pages/login-formateur.html"
                 class="group glass-card p-8 rounded-[2rem] hover:bg-white hover:border-indigo-100 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 text-left relative overflow-hidden">
                 <div
                     class="absolute top-0 right-0 w-32 h-32 bg-indigo-50 rounded-bl-[100px] -mr-8 -mt-8 transition-transform group-hover:scale-150 z-0">
@@ -219,7 +219,7 @@
                 </div>
             </a>
 
-            <a href="pages/etudiant/dashboard.html"
+            <a href="pages/login-etudiant.html"
                 class="group glass-card p-8 rounded-[2rem] hover:bg-white hover:border-purple-100 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 text-left relative overflow-hidden">
                 <div
                     class="absolute top-0 right-0 w-32 h-32 bg-purple-50 rounded-bl-[100px] -mr-8 -mt-8 transition-transform group-hover:scale-150 z-0">
@@ -236,7 +236,7 @@
                 </div>
             </a>
 
-            <a href="pages/parent/dashboard.html"
+            <a href="pages/login-parent.html"
                 class="group glass-card p-8 rounded-[2rem] hover:bg-white hover:border-pink-100 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 text-left relative overflow-hidden">
                 <div
                     class="absolute top-0 right-0 w-32 h-32 bg-pink-50 rounded-bl-[100px] -mr-8 -mt-8 transition-transform group-hover:scale-150 z-0">
@@ -253,7 +253,7 @@
                 </div>
             </a>
 
-            <a href="pages/entreprise/dashboard.html"
+            <a href="pages/entreprise/login.html"
                 class="group glass-card p-8 rounded-[2rem] hover:bg-white hover:border-blue-100 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 text-left relative overflow-hidden">
                 <div
                     class="absolute top-0 right-0 w-32 h-32 bg-blue-50 rounded-bl-[100px] -mr-8 -mt-8 transition-transform group-hover:scale-150 z-0">
