Add Enterprise Role Selection page and update Landing link

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 </div>
             </a>
 
-            <a href="pages/login-entreprise.html"
+            <a href="pages/entreprise/choix-role.html"
                 class="group glass-card p-8 rounded-[2rem] hover:bg-white hover:border-blue-100 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 text-left relative overflow-hidden">
                 <div
                     class="absolute top-0 right-0 w-32 h-32 bg-blue-50 rounded-bl-[100px] -mr-8 -mt-8 transition-transform group-hover:scale-150 z-0">
